[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
authors = [
    {name = "pydicom contributors"}
]
classifiers=[
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Intended Audience :: Healthcare Industry",
    "Intended Audience :: Science/Research",
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Software Development :: Libraries"
]
dependencies = [
    "pydicom"
]
description = "Extended type hints for pydicom"
keywords = ["dicom, python, medical, imaging"]
license = {text = "MIT"}
name = "types-pydicom"
readme = "README.md"
requires-python = ">=3.10"
version = "3.0.0.0.dev0"


[project.urls]
documentation = "https://pydicom.github.io/pydicom"
download = "https://github.com/pydicom/pydicom/archive/main.zip"
homepage = "https://github.com/pydicom/pydicom"
repository = "https://github.com/pydicom/pydicom"

[tool.ruff]
src = ["src"]
line-length = 214
target-version = "py310"
include = ["src/*.py", "tests/*.py", "doc/*.py"]


[tool.mypy]
python_version = "3.10"
files = "src/"
exclude = ["src/pydicom/benchmarks/", "src/pydicom/pixel_data_handlers/pillow_handler.py"]
hide_error_codes = false
warn_redundant_casts = false
warn_unused_ignores = false
warn_return_any = true
warn_unreachable = false
ignore_missing_imports = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disable_error_code = ["method-assign", "ignore-without-code", "redundant-expr", "truthy-bool"]

[[tool.mypy.overrides]]
# 2023-06: mypy complains for a line in this file if ignore used or not.
# Override unused ignores for that one file
module = "pydicom.encoders.base"
warn_unused_ignores = false
